--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,13 @@ aiofiles = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 
 [dev-packages]
+black = "*"
+isort = "*"
+flake8 = "*"
+mypy = "*"
+pre-commit = "*"
+pytest = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.10"
