--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 fastapi = "*"
-aiofiles = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 
 [dev-packages]
@@ -16,6 +15,8 @@ mypy = "*"
 pre-commit = "*"
 pytest = "*"
 pytest-cov = "*"
+anyio = {extras = ["trio"], version = "*"}
+httpx = "*"
 
 [requires]
 python_version = "3.10"
