--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,7 @@ repos:
         language: system
         entry: pipenv run pytest
         types: [python]
+        pass_filenames: false
 
       - id: pytest-cov
         name: pytest
